// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppBar loading renders correctly 1`] = `
<header
  class="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorDefault MuiPaper-elevation4"
  data-testid="AppBar"
>
  <div
    class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
  >
    <div
      class="MuiBox-root MuiBox-root-3"
    >
      <a
        class="MuiTypography-root makeStyles-title-1 MuiTypography-h6"
        href="/"
      >
        App
      </a>
      <div
        class="MuiBox-root MuiBox-root-4"
      />
    </div>
  </div>
</header>
`;

exports[`AppBar signed in renders correctly 1`] = `
<header
  class="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorDefault MuiPaper-elevation4"
  data-testid="AppBar"
>
  <div
    class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
  >
    <div
      class="MuiBox-root MuiBox-root-7"
    >
      <a
        class="MuiTypography-root makeStyles-title-5 MuiTypography-h6"
        href="/"
      >
        App
      </a>
      <div
        class="MuiBox-root MuiBox-root-8"
      >
        <div
          class="MuiBox-root MuiBox-root-9"
          data-testid="UserMenu"
        >
          <button
            aria-controls="user-menu"
            aria-haspopup="true"
            class="MuiButtonBase-root MuiIconButton-root"
            data-testid="UserMenu__iconButton"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <div
                class="MuiAvatar-root MuiAvatar-circular"
              >
                <img
                  class="MuiAvatar-img"
                  src="https://via.placeholder.com/150"
                />
              </div>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`AppBar signed out renders correctly 1`] = `
<header
  class="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorDefault MuiPaper-elevation4"
  data-testid="AppBar"
>
  <div
    class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
  >
    <div
      class="MuiBox-root MuiBox-root-12"
    >
      <a
        class="MuiTypography-root makeStyles-title-10 MuiTypography-h6"
        href="/"
      >
        App
      </a>
      <div
        class="MuiBox-root MuiBox-root-13"
      >
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-colorInherit"
          data-testid="AppBar__signInButton"
          href="/signin"
          role="button"
          tabindex="0"
        >
          <span
            class="MuiButton-label"
          >
            Sign in
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </div>
    </div>
  </div>
</header>
`;
